<resources>
    <string name="app_name">Androidmatic</string>

    <string name="title_main" translatable="false">@string/app_name</string>
    <string name="title_add_station">Select Stations</string>
    <string name="title_choose_station">Select Station</string>
    <string name="title_manual_setup">Manual Setup</string>

    <string name="action_try_again">Try Again</string>
    <string name="action_clear">Clear</string>
    <string name="action_check">Check</string>
    <string name="action_add">Add</string>

    <string name="dialog_action_close">Close</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_share">Share</string>
    <string name="dialog_action_load">Load</string>

    <string name="dialog_language_title">Language Selection</string>
    <string name="dialog_clipboard_data_title">Clipboard contains station</string>
    <string name="dialog_clipboard_data_message">You have a link in your clipboard with a station, do you want to import it? Station name: %s</string>

    <string name="image_desc_close">Close</string>
    <string name="image_desc_add_station">Add Station</string>
    <string name="image_desc_refresh">Refresh</string>
    <string name="image_desc_manual_configuration">Manual Configuration</string>
    <string name="image_desc_filter_enabled">Filter enabled</string>
    <string name="image_desc_filter_disabled">Filter disabled</string>
    <string name="image_desc_sorting_parameter">Sorting by %s</string>
    <string name="image_desc_temperature">Temperature</string>
    <string name="image_desc_humidity">Humidity</string>
    <string name="image_desc_pressure">Pressure</string>
    <string name="image_desc_wind">Wind</string>
    <string name="image_desc_rain">Rain</string>
    <string name="image_desc_language_selected">Language selected</string>
    <string name="image_desc_language_not_selected">Language not selected</string>

    <string name="menu_item_home">Home</string>
    <string name="menu_item_settings">Settings</string>

    <string name="title_filter_province">Province</string>
    <string name="title_sort_by">Sort By</string>
    <string name="title_filter">Filter</string>
    <string name="title_search">Search</string>
    <string name="filter_toggle_all_off">All Off</string>
    <string name="sort_by">Sort By %s</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_location">Location</string>
    <string name="sort_by_distance">Distance</string>
    <string name="filter_enabled">Enabled</string>
    <string name="label_provider">Provider</string>

    <string name="manual_provider">Provider</string>
    <string name="manual_template_url">Meteoclimatic Template Path</string>
    <string name="manual_template_name">Station Name</string>

    <string name="no_stations_found">No stations found</string>

    <string name="error_load_stations">Could not load stations</string>
    <string name="error_server_reach">The Meteoclimatic server could not be reached. Please, check your Internet connection and try again later.</string>
    <string name="error_load_data">Could not load station\'s data</string>
    <string name="error_server_timeout">The connection to Meteoclimatic\'s server timed out. Please, try again later</string>
    <string name="error_unknown">An unknown error could not allow the data to be loaded.</string>

    <string name="weather_sunny">Sunny</string>

    <string name="time_short_seconds">%d s</string>
    <string name="time_short_minutes">%d min</string>
    <string name="time_short_hours">%d h</string>
    <string name="time_short_days">%d days</string>

    <string name="state_adding">Adding…</string>
    <string name="state_loading">Loading…</string>

    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_summary">Select your favorite language to display in the UI.</string>
    <string name="settings_analytics_enabled_title">Send Usage and Performance data</string>
    <string name="settings_analytics_enabled_summary">If enabled, the app will send the developer information about the performance of the app, and how it\'s used, to improve its functionality.</string>
    <string name="settings_error_enabled_title">Send Error and Crash logs</string>
    <string name="settings_error_enabled_summary">If enabled, the app will send information to the developer whenever the app crashes, or there\'s an error. This makes the process of diagnosing and fixing errors so much easier. This information contains app logs, and some information about the device you are running, and the software it\'s running.</string>
    <string name="settings_service_title">Background Service</string>
    <string name="settings_service_running">Weather updates are being fetched in background every %d minutes. Last run: %s</string>
    <string name="settings_service_running_never">Weather updates are being fetched in background every %d minutes. Still not run any time.</string>
    <string name="settings_service_schedule">Weather updates are not running, press here to enable.</string>
    <string name="settings_info">Version: %s (%d)</string>

    <string name="widget_weather_description">A widget that displays the current weather of a desired station.</string>
    <string name="widget_loading">Loading…</string>
    <string name="widget_weather_image_content_description">The descriptive icon for the current weather.</string>
    <string name="widget_weather_preview_name">Antarctica</string>
    <string name="widget_weather_preview_temp" translatable="false">24ºC</string>
    <string name="widget_weather_preview_rain" translatable="false">2 mm</string>

    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_unknown" translatable="false">¿?</string>
    <string-array name="wind_directions">
        <item>@string/wind_direction_north</item>
        <item>@string/wind_direction_north_east</item>
        <item>@string/wind_direction_east</item>
        <item>@string/wind_direction_south_east</item>
        <item>@string/wind_direction_south</item>
        <item>@string/wind_direction_south_west</item>
        <item>@string/wind_direction_west</item>
        <item>@string/wind_direction_north_west</item>
        <item>@string/wind_direction_unknown</item>
    </string-array>

    <string name="toast_provider_ok">The url is valid</string>
    <string name="toast_provider_fail">The url is not valid</string>
    <string name="toast_provider_data_invalid">The URL is valid, but it\'s returning invalid data.</string>
    <string name="toast_short_link">Could not generate short link.</string>
    <string name="toast_link_invalid">Link is not valid.</string>

    <string name="link_station_description">Load this link with Androidmatic to add a new station automatically.</string>

    <string name="filter_add_station">Add Station</string>
</resources>