<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/widget_background">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/widget_weather_image_content_description"
        android:src="@drawable/weather_sunny"
        android:layout_marginEnd="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_weather_preview_name"
            android:textColor="?android:attr/colorPrimary"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_thermometer_48dp"
                app:tint="?android:attr/textColorSecondary"
                android:contentDescription="@string/image_desc_temperature"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/widget_weather_preview_temp"
                android:textSize="12sp"
                android:textColor="?android:attr/textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_rainy_48dp"
                app:tint="?android:attr/textColorSecondary"
                android:contentDescription="@string/image_desc_rain"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/widget_weather_preview_rain"
                android:textSize="12sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>